# ghostmodule-mongodb

./: CMakeLists.txt  conanfile.txt
.github/workflows/: ghostmodule-mongodb.yml
examples/: docker-compose.yml  persistence_todo_list.cpp
examples/protobuf/: persistency_todo_list.proto
include/ghost/persistence_mongodb/: DatabaseMongoDB.hpp  PersistenceMongoDBExtension.hpp  PersistenceMongoDBExtensionBuilder.hpp
src/: CMakeLists.txt
src/persistence_mongodb/: CMakeLists.txt  DataCollectionMongoDB.cpp  DataCollectionMongoDB.hpp  DatabaseMongoDB.cpp  DatabaseMongoDB.hpp  PersistenceMongoDBExtension.cpp  PersistenceMongoDBExtension.hpp  PersistenceMongoDBExtensionBuilder.cpp  PersistenceMongoDBExtensionBuilder.hpp
